--- a/aboutus.html
+++ b/aboutus.html
@@ -136,7 +136,7 @@
     <div class="row justify-content-center">
         <div class="col-md-4 text-center">
             <img src="logo.png" alt="logo" style="width: 60%;" class="rounded-pill">
-            <h6 style="color: rgb(0, 0, 0); margin-top: -3%; font-size: 1.5rem;">Your Expectations Drive Us Forward</h6>
+            <h6 style="color: rgb(0, 0, 0); margin-top: -3%; font-size: 1.5rem;">Our passion is your perfect event</h6>
         </div>
         <div class="col-md-8 text-center">
             <div class="row">
