--- a/services.html
+++ b/services.html
@@ -90,6 +90,7 @@
         .card {
             background-color: #cea727;
         }
+      
     </style>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
@@ -155,32 +156,42 @@
     <div class="row">
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
-                <img src="wedding.jpg" class="rounded-pill mb-3" alt="Wedding" style="width:100%; max-width:240px; height:290px;">
-                <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Wedding</h5>
+                <a href="wedding.html">
+                    <img src="wedding.jpg" class="rounded-pill mb-3" alt="Wedding" style="width:100%; max-width:240px; height:290px;">
+                    <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Wedding</h5>
+                </a>
             </div>
         </div>
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
-                <img src="debut.jpg" class="rounded-pill mx-1 mb-3" alt="Debut" style="width:100%; max-width:240px; height:290px;">
-                <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Debut</h5>
+                <a href="debut.html">
+                    <img src="debut.jpg" class="rounded-pill mx-1 mb-3" alt="Debut" style="width:100%; max-width:240px; height:290px;">
+                    <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Debut</h5>
+                </a>
             </div>
         </div>
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
-                <img src="party.jpeg" class="rounded-pill mb-3" alt="Party" style="width:100%; max-width:240px; height:290px;">
-                <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Party</h5>
+                <a href="party.html">
+                    <img src="party.jpeg" class="rounded-pill mb-3" alt="Party" style="width:100%; max-width:240px; height:290px;">
+                    <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Party</h5>
+                </a>
             </div>
         </div>
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
-                <img src="birthday.avif" class="rounded-pill mx-1 mb-3" alt="Birthday" style="width:100%; max-width:240px; height:290px;">
-                <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Birthday</h5>
+                <a href="birthday.html">
+                    <img src="birthday.avif" class="rounded-pill mx-1 mb-3" alt="Birthday" style="width:100%; max-width:240px; height:290px;">
+                    <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Birthday</h5>
+                </a>
             </div>
         </div>
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
-                <img src="occasion.jpg" class="rounded-pill mx-1 mb-3" alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
-                <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Special Occasion</h5>
+                <a href="occasion.html">
+                    <img src="occasion.jpg" class="rounded-pill mx-1 mb-3" alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
+                    <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Special Occasion</h5>
+                </a>
             </div>
         </div>
     </div>
