--- a/wedding.html
+++ b/wedding.html
@@ -413,7 +413,7 @@
 
     <footer class="footer text-center">
         <div class="container-fluid bg-dark text-white">
-            <span>Contact us: (123) 456-7890 | www.grandgalacatering.com</span><br>
+            <span>Contact us: +639776506109 | www.grandgalacatering.com</span><br>
             <span>&copy; 2024 Catering Service</span>
         </div>
     </footer>
