--- a/birthday.html
+++ b/birthday.html
@@ -422,51 +422,15 @@
 
     <div class="container-fluid" style="background-color: #1d1915;">
         <div class="row justify-content-center m-2">
-            <h1 class="text-center text-warning mt-2">CHOOSE NOW</h1>
+            <h1 class="text-center text-warning mt-2">RESERVE NOW</h1>
             <div class="col-md-3 mb-4">
                 <div class="card text-center mt-4">
                     <div class="card-header bg-dark text-white">
-                        Option 1
+                    OVERALL PACKAGE 
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Standard Package</h5>
-                        <p class="card-text">Includes: Basic menu selection, standard service, limited customization.</p>
-                        <p class="card-text">Price: P10K 100-150 person</p>
-                        <p class="card-text">Price: P20K 151-300 person</p>
-                        <p class="card-text">Price: P30K 301-450 person</p>
-                        <p class="card-text"><b>add P20-50k for venue setup</b></p>
-                        <a href="contacts.html" class="btn btn-primary">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-4">
-                <div class="card text-center mt-4">
-                    <div class="card-header bg-dark text-white">
-                        Option 2
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Premium Package</h5>
-                        <p class="card-text">Includes: Enhanced menu selection, premium service, moderate customization.</p>
-                        <p class="card-text">Price: P20K 100-150 person</p>
-                        <p class="card-text">Price: P30K 151-300 person</p>
-                        <p class="card-text">Price: P45K 301-450 person</p>
-                        <p class="card-text"><b>add P20-50k for venue setup</b></p>
-                        <a href="contacts.html" class="btn btn-primary">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-4">
-                <div class="card text-center mt-4">
-                    <div class="card-header bg-dark text-white">
-                        Option 3
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Deluxe Package</h5>
-                        <p class="card-text">Includes: Premium menu selection, VIP service, extensive customization.</p>
-                        <p class="card-text">Price: P30K 100-150 person</p>
-                        <p class="card-text">Price: P50K 151-300 person</p>
-                        <p class="card-text">Price: P60K 301-450 person</p>
-                        <p class="card-text"><b>add P20-50k for venue setup</b></p>
+                        <h5 class="card-title">PHP 230,000</h5>
+                        <HR>
                         <a href="contacts.html" class="btn btn-primary">Contact Us</a>
                     </div>
                 </div>
