--- a/contacts.html
+++ b/contacts.html
@@ -195,12 +195,13 @@
                                             <input type="number" class="form-control" id="numberOfGuests" min="1" required>
                                         </div>
                                         <div class="mb-3">
-                                            <label for="package" class="form-label">Package</label>
+                                            <label for="package" class="form-label">OCCASION</label>
                                             <select class="form-select" id="package" required>
-                                                <option value="Standard">Standard</option>
-                                                <option value="Premium">Premium</option>
-                                                <option value="Deluxe">Deluxe</option>
-                                                <option value="Custom">Custom</option>
+                                                <option value="Standard">WEDDING</option>
+                                                <option value="Premium">DEBUT</option>
+                                                <option value="Deluxe">PARTY</option>
+                                                <option value="Custom">BIRTHDAY</option>
+                                                  <option value="Custom">SPECIAL OCCASION</option>
                                             </select>
                                         </div>
                                         <div class="mb-3">
