--- a/birthday.html
+++ b/birthday.html
@@ -435,24 +435,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 mb-4">
-                <div class="card text-center mt-4">
-                    <div class="card-header bg-dark text-white">
-                        Option 4
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Custom Package</h5>
-                        <p class="card-text">Includes: Tailored menu selection, bespoke service, full customization.</p>
-                        <p class="card-text">Price: Custom PRICE and VISITORS</p>
-                        <p class="card-text">Just contact us</p>
-                        <p class="card-text">You can also visit to our place</p>
-                        <p class="card-text"><b>add P20-50k for venue setup</b></p>
-                        <a href="contacts.html" class="btn btn-primary">Contact Us</a>
-                    </div>
+            
+            <div class="container-fluid" style="background-color: #1d1915;">
+        <div class="row justify-content-center m-2">
+            <h1 class="text-center text-warning mt-2">RESERVE NOW</h1>
+           <div class="col-md-3 mb-4">
+            <div class="card text-center mt-4">
+                <div class="card-header bg-dark text-white">
+                    BIRTHDAY PACKAGE
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Php 190,000</h5>
+                    <p class="card-text">For first 90 Guests / Excess Php 400 per Head <br> Php 700 per head only for 200pax and up</p>
+                    <a href="contacts.html" class="btn btn-primary">Contact Us</a>
                 </div>
             </div>
         </div>
-    </div>
 
     <footer class="footer text-center">
         <div class="container-fluid bg-dark text-white">
