--- a/occasion.html
+++ b/occasion.html
@@ -374,17 +374,17 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-     <div class="container-fluid" style="background-color: #1d1915;">
+    <div class="container-fluid" style="background-color: #1d1915;">
         <div class="row justify-content-center m-2">
             <h1 class="text-center text-warning mt-2">RESERVE NOW</h1>
             <div class="col-md-3 mb-4">
                 <div class="card text-center mt-4">
                     <div class="card-header bg-dark text-white">
-                    OVERALL PACKAGE 
+                  SPECIAL OCCASION PACKAGE 
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">PHP 310,000</h5>
-                        <HR>
+                        <h5 class="card-title">Php 310,000</h5>
+                        <p class="card-text">For first 150 Guests/Excess Php600 per Head <br>Php 800 per head only for 250pax and Up </p>
                         <a href="contacts.html" class="btn btn-primary">Contact Us</a>
                     </div>
                 </div>
