--- a/party.html
+++ b/party.html
@@ -419,18 +419,18 @@
  <div class="container-fluid" style="background-color: #1d1915;">
         <div class="row justify-content-center m-2">
             <h1 class="text-center text-warning mt-2">RESERVE NOW</h1>
-            <div class="col-md-3 mb-4">
-                <div class="card text-center mt-4">
-                    <div class="card-header bg-dark text-white">
-                    OVERALL PACKAGE 
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">PHP 250,000</h5>
-                        <HR>
-                        <a href="contacts.html" class="btn btn-primary">Contact Us</a>
-                    </div>
+           <div class="col-md-3 mb-4">
+            <div class="card text-center mt-4">
+                <div class="card-header bg-dark text-white">
+                    PARTY PACKAGE
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Php 200,000</h5>
+                    <p class="card-text">For first 100 Guests / Excess Php 450 per Head <br> Php 650 per head only for 200pax and up</p>
+                    <a href="contacts.html" class="btn btn-primary">Contact Us</a>
                 </div>
             </div>
+        </div>
           
 
     <footer class="footer text-center">
