--- a/wedding.html
+++ b/wedding.html
@@ -345,17 +345,17 @@
         <div class="row justify-content-center m-2">
             <h1 class="text-center text-warning mt-2">RESERVE NOW</h1>
             <div class="col-md-3 mb-4">
-                <div class="card text-center mt-4">
-                    <div class="card-header bg-dark text-white">
-                    OVERALL PACKAGE 
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">PHP 390,000</h5>
-                        <HR>
-                        <a href="contacts.html" class="btn btn-primary">Contact Us</a>
-                    </div>
+            <div class="card text-center mt-4">
+                <div class="card-header bg-dark text-white">
+                    WEDDING PACKAGE
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Php 280,000</h5>
+                    <p class="card-text">For first 100 Guests / Excess Php 900 per Head <br> Php 850 per head only for 200pax and up</p>
+                    <a href="contacts.html" class="btn btn-primary">Contact Us</a>
                 </div>
             </div>
+        </div>
           
 
     <footer class="footer text-center">
