--- a/services.html
+++ b/services.html
@@ -90,7 +90,21 @@
         .card {
             background-color: #cea727;
         }
-      
+        .footer a {
+            color: #f1f1ee;
+        }
+        .footer a:hover {
+            color: #cea727;
+        }
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+        }
+        .testimonial{
+            background-color: black;
+        }
     </style>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
@@ -189,22 +203,195 @@
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
                 <a href="occasion.html">
-                    <img src="occasion.jpg" class="rounded-pill mx-1 mb-3" alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
+                    <img src="occasion.jpg" class="rounded-pill mx-1 " alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
                     <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Special Occasion</h5>
                 </a>
             </div>
         </div>
     </div>
+</div><hr>
+
+
+
+<div class="container-fluid testimonial my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h3 style="color: #cea727;font-family:'elephant';margin:3%;">Client Testimonials</h3>
+            <p style="color: #e7d9aa;">See what our clients have to say about us.</p>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Add testimonial cards here -->
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p class="card-text">"Grand Gala Catering made our wedding day unforgettable. The food and service were exceptional!" - John & Jane Doe</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p class="card-text">"Highly recommend for any event. Professional, delicious, and truly memorable." - Company XYZ</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <p class="card-text">"From start to finish, the team was amazing. Our guests loved everything!" - Sarah & Mike</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="container-fluid my-5" >
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h3>Event Gallery</h3>
+            <p>Check out photos from some of our recent events.</p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <!-- Add gallery images here -->
+        <div class="col-md-2 m-2 text-center">
+            <div class="position-relative zoom-effect">
+                <img src="party_location2.jpg" alt="Gallery Image 1"  width="340px" height="250px">
+            </div>
+        </div>
+        <div class="col-md-2 m-2 text-center">
+            <div class="position-relative zoom-effect">
+                <img src="party_location5.jpg" alt="Gallery Image 2"  width="340px" height="250px">
+            </div>
+        </div>
+        <div class="col-md-2 m-2 text-center">
+            <div class="position-relative zoom-effect">
+                <img src="location4.jpg" alt="Gallery Image 3"  width="340px" height="250px">
+            </div>
+        </div>
+        <div class="col-md-2 m-2 text-center">
+            <div class="position-relative zoom-effect">
+                <img src="location5.jpeg" alt="Gallery Image 4" " width="340px" height="250px">
+            </div>
+        </div>
+    </div>
 </div>
 
-<hr>
+<style>
+    .zoom-effect {
+        overflow: hidden;
+        position: relative;
+    }
 
+    .zoom-effect img {
+        transition: transform 0.5s ease;
+    }
+
+    .zoom-effect:hover img {
+        transform: scale(1.1);
+    }
+</style>
+
+
+<div class="container my-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h3>Frequently Asked Questions</h3>
+            <p>Find answers to some of the most common questions.</p>
+        </div>
+    </div>
+    <div class="row">
+        <!-- Add FAQ here -->
+        <div class="col-md-12">
+            <div class="accordion" id="faqAccordion">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading1">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse1" aria-expanded="true" aria-controls="faqCollapse1">
+                            What services do you offer?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse1" class="accordion-collapse collapse show" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            We offer a variety of catering services including weddings, corporate events, parties, birthdays, and special occasions. Each service is tailored to meet the specific needs and preferences of our clients.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse2" aria-expanded="false" aria-controls="faqCollapse2">
+                            Can you accommodate special dietary requirements?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Yes, we can accommodate a wide range of dietary requirements including vegetarian, vegan, gluten-free, and more. Please let us know your specific needs when you book our services.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse3" aria-expanded="false" aria-controls="faqCollapse3">
+                            How far in advance should I book your services?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            We recommend booking as early as possible to ensure availability, especially for popular dates and seasons. Ideally, you should book at least 3-6 months in advance.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse4" aria-expanded="false" aria-controls="faqCollapse4">
+                            What is your cancellation policy?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Our cancellation policy varies depending on the type of event and the timeframe. Please refer to our terms and conditions or contact us directly for detailed information regarding cancellations.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading5">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse5" aria-expanded="false" aria-controls="faqCollapse5">
+                            Do you provide staff for the events?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            Yes, our catering services include professional staff to ensure smooth and efficient service throughout your event. Our team is experienced in handling various types of events with the utmost professionalism.
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="faqHeading6">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faqCollapse6" aria-expanded="false" aria-controls="faqCollapse6">
+                            How can I get a quote for my event?
+                        </button>
+                    </h2>
+                    <div id="faqCollapse6" class="accordion-collapse collapse" aria-labelledby="faqHeading6" data-bs-parent="#faqAccordion">
+                        <div class="accordion-body">
+                            You can get a quote by contacting us through our website, phone, or email. Provide us with details about your event including the date, location, number of guests, and any specific requirements, and we will prepare a customized quote for you.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <footer class="footer text-center">
-    <div class="container-fluid bg-dark text-white">
-        <span>&copy; 2024 Catering Service</span>
+    <div class="container-fluid bg-dark text-white py-3">
+        <p class="mb-0">&copy; 2024 Grand Gala Catering Service. All Rights Reserved.</p>
+     
     </div>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
