--- a/services.html
+++ b/services.html
@@ -256,22 +256,22 @@
     <div class="row justify-content-center">
         <!-- Add gallery images here -->
         <div class="col-md-2 m-2 text-center">
-            <div class="position-relative zoom-effect">
+            <div class="position-relative zoom-effects">
                 <img src="party_location2.jpg" alt="Gallery Image 1"  width="340px" height="250px">
             </div>
         </div>
         <div class="col-md-2 m-2 text-center">
-            <div class="position-relative zoom-effect">
+            <div class="position-relative zoom-effects">
                 <img src="party_location5.jpg" alt="Gallery Image 2"  width="340px" height="250px">
             </div>
         </div>
         <div class="col-md-2 m-2 text-center">
-            <div class="position-relative zoom-effect">
+            <div class="position-relative zoom-effects">
                 <img src="location4.jpg" alt="Gallery Image 3"  width="340px" height="250px">
             </div>
         </div>
         <div class="col-md-2 m-2 text-center">
-            <div class="position-relative zoom-effect">
+            <div class="position-relative zoom-effects">
                 <img src="location5.jpeg" alt="Gallery Image 4" " width="340px" height="250px">
             </div>
         </div>
@@ -279,16 +279,16 @@
 </div>
 
 <style>
-    .zoom-effect {
+    .zoom-effects {
         overflow: hidden;
         position: relative;
     }
 
-    .zoom-effect img {
+    .zoom-effects img {
         transition: transform 0.5s ease;
     }
 
-    .zoom-effect:hover img {
+    .zoom-effects:hover img {
         transform: scale(1.1);
     }
 </style>
