--- a/services.html
+++ b/services.html
@@ -90,7 +90,7 @@
         .card {
             background-color: #cea727;
         }
-        .footer a {
+          .footer a {
             color: #f1f1ee;
         }
         .footer a:hover {
@@ -203,15 +203,15 @@
         <div class="col-md-4 col-lg-2 text-center mb-4 m-3">
             <div class="position-relative zoom-effect">
                 <a href="occasion.html">
-                    <img src="occasion.jpg" class="rounded-pill mx-1 " alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
+                    <img src="occasion.jpg" class="rounded-pill mx-1 mb-3" alt="Special Occasion" style="width:100%; max-width:240px; height:290px;">
                     <h5 class="cap text-white position-absolute bottom-0 start-50 translate-middle-x">Special Occasion</h5>
                 </a>
             </div>
         </div>
     </div>
-</div><hr>
+</div>
 
-
+<hr>
 
 <div class="container-fluid testimonial my-5">
     <div class="row justify-content-center">
@@ -382,16 +382,13 @@
     </div>
 </div>
 
-
-<footer class="footer text-center">
-    <div class="container-fluid bg-dark text-white py-3">
-        <p class="mb-0">&copy; 2024 Grand Gala Catering Service. All Rights Reserved.</p>
-     
-    </div>
-</footer>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<footer class="footer text-center">
+    <div class="container-fluid bg-dark text-white">
+        <span>&copy; 2024 Catering Service</span>
+    </div>
+</footer>
 </body>
 </html>
