--- a/services.html
+++ b/services.html
@@ -312,7 +312,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse1" class="accordion-collapse collapse show" aria-labelledby="faqHeading1" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             We offer a variety of catering services including weddings, corporate events, parties, birthdays, and special occasions. Each service is tailored to meet the specific needs and preferences of our clients.
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse2" class="accordion-collapse collapse" aria-labelledby="faqHeading2" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             Yes, we can accommodate a wide range of dietary requirements including vegetarian, vegan, gluten-free, and more. Please let us know your specific needs when you book our services.
                         </div>
                     </div>
@@ -336,7 +336,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse3" class="accordion-collapse collapse" aria-labelledby="faqHeading3" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             We recommend booking as early as possible to ensure availability, especially for popular dates and seasons. Ideally, you should book at least 3-6 months in advance.
                         </div>
                     </div>
@@ -348,7 +348,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse4" class="accordion-collapse collapse" aria-labelledby="faqHeading4" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             Our cancellation policy varies depending on the type of event and the timeframe. Please refer to our terms and conditions or contact us directly for detailed information regarding cancellations.
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse5" class="accordion-collapse collapse" aria-labelledby="faqHeading5" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             Yes, our catering services include professional staff to ensure smooth and efficient service throughout your event. Our team is experienced in handling various types of events with the utmost professionalism.
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                         </button>
                     </h2>
                     <div id="faqCollapse6" class="accordion-collapse collapse" aria-labelledby="faqHeading6" data-bs-parent="#faqAccordion">
-                        <div class="accordion-body">
+                        <div class="accordion-body"style="background-color: #e7d9aa;">
                             You can get a quote by contacting us through our website, phone, or email. Provide us with details about your event including the date, location, number of guests, and any specific requirements, and we will prepare a customized quote for you.
                         </div>
                     </div>
